<resources>
    <string name="launcher_app_name" translatable="false">@string/app_name</string>
    <string name="app_name" translatable="false">STEX</string>
    <string name="app_motto">Trade anytime and anywhere with</string>
    <string name="company_address" translatable="false">Pärnu mnt 158, Tallinn, 11317, Estonia</string>
    <string name="copyright_template">2017-%d. All rights reserved.</string>
    <string name="wallets">Wallets</string>
    <string name="orders">Orders</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="referral">Referral</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="news">News</string>
    <string name="feedback">Feedback</string>
    <string name="share_the_app">Share the app</string>
    <string name="favorites">Favorites</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="balance">Balance</string>
    <string name="profile">Profile</string>
    <string name="markets">Markets</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="action_share_via">Share via…</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_buy">Buy</string>
    <string name="action_sell">Sell</string>
    <string name="action_ask">Ask</string>
    <string name="action_bid">Bid</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_spent">Spent</string>
    <string name="action_received">Received</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_show_empty_wallets">Show empty wallets</string>
    <string name="action_hide_empty_wallets">Hide empty wallets</string>
    <string name="action_sort">Sort</string>
    <string name="action_use_pin">Use Pin</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_log_in">Log In</string>
    <string name="action_submit">Submit</string>
    <string name="action_register">Register</string>
    <string name="action_resend_verification_email">Resend Verification Email</string>
    <string name="action_resend_password_reset_email">Resend Password Reset Email</string>
    <string name="action_go_to_login">Go to Login</string>
    <string name="action_confirm_new_password">Confirm New Password</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_send_email">Send Email</string>
    <string name="action_select">Select</string>
    <string name="action_verify">Verify</string>
    <string name="action_resend_confirmation_email">Resend Email</string>
    <string name="action_verify_now">Verify Now</string>
    <string name="action_verify_later">Verify Later</string>
    <string name="action_copy">Copy</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_share">Share</string>
    <string name="action_start">Start</string>
    <string name="action_create_address">Create Address</string>
    <string name="action_search_markets">Search markets</string>
    <string name="action_sort_by">Sort By</string>
    <string name="pair_state_active">Active</string>
    <string name="pair_state_disabled">Disabled</string>
    <string name="transaction_status_finished">FINISHED</string>
    <string name="transaction_status_cancelled_by_user">CANCELLED BY USER</string>
    <string name="transaction_status_awaiting_approval">AWAITING APPROVAL</string>
    <string name="transaction_status_approved">APPROVED</string>
    <string name="transaction_status_not_confirmed">NOT CONFIRMED</string>
    <string name="transaction_status_processing">PROCESSING</string>
    <string name="transaction_status_cancelled_by_admin">CANCELLED BY ADMIN</string>
    <string name="transaction_status_awaiting">AWAITING</string>
    <string name="transaction_status_hodl">HODL</string>
    <string name="transaction_status_error">ERROR</string>
    <string name="transaction_status_unknown">UNKNOWN STATUS</string>
    <string name="preposition_of">of</string>
    <string name="last_price">Last Price</string>
    <string name="at_price">At Price</string>
    <string name="fee">Fee</string>
    <string name="confirmations">Confirmations</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="filled_amount">Filled Amount</string>
    <string name="stop_price">Stop Price</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="your_balance">Your Balance</string>
    <string name="coin_status">Coin Status</string>
    <string name="pair_status">Pair Status</string>
    <string name="base_currency">Base Currency</string>
    <string name="quote_currency">Quote Currency</string>
    <string name="daily_min_price">24hr Min Price</string>
    <string name="daily_max_price">24hr Max Price</string>
    <string name="daily_change">24hr Change</string>
    <string name="daily_volume">24hr Volume</string>
    <string name="buy_fee_percent">Buy Fee</string>
    <string name="sell_fee_percent">Sell Fee</string>
    <string name="available_balance">Available Balance</string>
    <string name="balance_in_orders">Balance In Orders</string>
    <string name="bonus_balance">Bonus Balance</string>
    <string name="total_balance">Total Balance</string>
    <string name="search_deposits">Search deposits</string>
    <string name="search_withdrawals">Search withdrawals</string>
    <string name="deposit_address">Deposit Address</string>
    <string name="public_key">Public Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="payment_id" translatable="false">Payment ID</string>
    <string name="destination_tag" translatable="false">Destination Tag</string>
    <string name="memo" translatable="false">Memo</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="data_streaming">Data Streaming</string>
    <string name="stream_real_time_data">Stream real-time data</string>
    <string name="appearance">Appearance</string>
    <string name="animate_charts">Animate charts</string>
    <string name="bullish_candle_stick_style">Bullish candle stick style</string>
    <string name="bearish_candle_stick_style">Bearish candle stick style</string>
    <string name="zoom_in_on_the_price_chart">Zoom in on the price chart</string>
    <string name="depth_chart_line_style">Depth chart line style</string>
    <string name="highlight_orderbook_real_time_updates">Highlight orderbook real-time updates</string>
    <string name="highlight_new_trades_real_time_addition">Highlight real-time addition of new trades</string>
    <string name="formatting">Formatting</string>
    <string name="notifications">Notifications</string>
    <string name="debug" translatable="false">Debug</string>
    <string name="grouping">Grouping</string>
    <string name="grouping_separator">Grouping separator</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="change_pin">Change PIN</string>
    <string name="fingerprint_unlock">Fingerprint Unlock</string>
    <string name="force_authentication_on_app_startup">Force authentication on app startup</string>
    <string name="authentication_session_duration">Authentication Session Duration</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="phone_led">Phone LED</string>
    <string name="notification_ringtone">Notification ringtone</string>
    <string name="device_metrics" translatable="false">Device metrics</string>
    <string name="device_metrics_description" translatable="false">Shows device specific metrics for debugging</string>
    <string name="clear_user_data" translatable="false">Clear user data</string>
    <string name="clear_user_data_description" translatable="false">Clears user\'s data without signing them out</string>
    <string name="show_analytics_toasts" translatable="false">Show analytics toasts</string>
    <string name="show_toasts_of_analytics_events" translatable="false">Show toasts of analytics events</string>
    <string name="volume_template">vol %s</string>
    <string name="sign_out_template">Sign out of @%s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="ringtones">Ringtones</string>
    <string name="note">Note</string>
    <string name="app_sharing_template">I\'m using STEX for trading cryptocurrencies! Try it out for yourself: %s</string>
    <string name="period">Period</string>
    <string name="comma">Comma</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="solid">Solid</string>
    <string name="hollow">Hollow</string>
    <string name="linear">Linear</string>
    <string name="stepped">Stepped</string>
    <string name="price_unavailable">Unavailable</string>
    <string name="volume_unavailable">Unavailable</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="referral_code">Referral Code (optional)</string>
    <string name="error">Error</string>
    <string name="unknown_parameter">Unknown Parameter</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="min_amount">Min. Amount</string>
    <string name="final_amount">Final Amount</string>
    <string name="all">ALL</string>
    <string name="price_chart">Price Chart</string>
    <string name="depth_chart">Depth Chart</string>
    <string name="trade">Trade</string>
    <string name="trades">Trades</string>
    <string name="orderbook">Orderbook</string>
    <string name="trade_history">Trade History</string>
    <string name="all_trades">All Trades</string>
    <string name="keep_screen_on">Keep the Screen On</string>
    <string name="market">Market</string>
    <string name="limit">Limit</string>
    <string name="stop_limit">Stop-Limit</string>
    <string name="warning">Warning</string>
    <string name="currency">Currency</string>
    <string name="order_history">Order History</string>
    <string name="internal_transfer">Internal Transfer</string>
    <string name="language">Language</string>
    <string name="verification">Verification</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login_code_input_view_hint">Code</string>
    <string name="login_confirmation_email_hint">
        We sent you a one-time code to your email. Please check your inbox to get the code to enter below. Make sure to check the spam folder if you can’t see our email.
    </string>
    <string name="login_2fa_help_dialog_title">Disabling 2FA</string>
    <string name="registration_age_check_box_text">I am over 18 years old</string>
</resources>