<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/helpBtnTv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hintTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/user_admission_hint_vertical_margin"
                android:gravity="center_horizontal"
                android:textSize="@dimen/user_admission_hint_text_size"
                tools:text="@string/login_confirmation_email_hint"
                tools:textColor="@color/white" />

            <TextView
                android:id="@+id/codeLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
                android:freezesText="true"
                android:textSize="@dimen/user_admission_text_size"
                tools:text="@string/email"
                tools:textColor="@color/deepTealSecondaryTextColor" />

            <com.stocksexchange.android.ui.views.InputView
                android:id="@+id/codeIv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:etHintText="@string/login_code_input_view_hint"
                tools:etHintTextColor="@color/colorLoginInputViewHintColor"
                tools:etTextColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/helpBtnTv"
        style="@style/UserAdmissionButtonDoNotHaveAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        tools:text="@string/login_2fa_help_dialog_title"
        tools:textColor="@color/deepTealSecondaryTextColor" />

</RelativeLayout>