<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/emailLabelTv"
        style="@style/TradeFormViewLabel"
        android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
        android:freezesText="true"
        android:text="@string/email"
        tools:textColor="@color/deepTealSecondaryTextColor" />

    <com.stocksexchange.android.ui.views.InputView
        android:id="@+id/emailIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:etHintText="@string/email"
        tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
        tools:etTextColor="@color/white" />

    <TextView
        android:id="@+id/passwordLabelTv"
        style="@style/TradeFormViewLabel"
        android:layout_marginTop="@dimen/user_admission_input_view_top_margin"
        android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
        android:freezesText="true"
        android:text="@string/password"
        tools:textColor="@color/deepTealSecondaryTextColor" />

    <com.stocksexchange.android.ui.views.InputView
        android:id="@+id/passwordIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:etHintText="@string/password"
        tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
        tools:etTextColor="@color/white"
        tools:iconColor="@color/colorUserAdmissionInputViewIconColor" />

    <TextView
        android:id="@+id/referralLabelTv"
        style="@style/TradeFormViewLabel"
        android:layout_marginTop="@dimen/user_admission_input_view_top_margin"
        android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
        android:freezesText="true"
        android:text="@string/referral"
        tools:textColor="@color/deepTealSecondaryTextColor" />

    <com.stocksexchange.android.ui.views.InputView
        android:id="@+id/referralCodeIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:etHintText="@string/referral_code"
        tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
        tools:etTextColor="@color/white"
        tools:iconColor="@color/colorUserAdmissionInputViewIconColor" />

    <LinearLayout
        style="@style/RegistrationCredentialsContainer"
        android:layout_marginTop="@dimen/user_admission_input_view_top_margin">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/termsOfUseCb"
            style="@style/RegistrationCredentialsCheckBox"
            tools:buttonTint="@color/deepTealAccentColor"
            tools:checked="true" />

        <TextView
            android:id="@+id/termsOfUseTv"
            style="@style/RegistrationCredentialsTextView"
            tools:text="I agree to STEX's Terms of Use"
            tools:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        style="@style/RegistrationCredentialsContainer"
        android:layout_marginTop="@dimen/user_admission_input_view_title_bottom_margin">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ageCb"
            style="@style/RegistrationCredentialsCheckBox"
            tools:buttonTint="@color/deepTealAccentColor"
            tools:checked="true" />

        <TextView
            android:id="@+id/ageTv"
            style="@style/RegistrationCredentialsTextView"
            tools:text="@string/registration_age_check_box_text"
            tools:textColor="@color/white" />

    </LinearLayout>

</merge>
