<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emailLabelTv"
            style="@style/TradeFormViewLabel"
            android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
            android:freezesText="true"
            android:text="@string/email"
            tools:textColor="@color/deepTealSecondaryTextColor" />

        <com.stocksexchange.android.ui.views.InputView
            android:id="@+id/emailIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:etHintText="@string/email"
            tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
            tools:etTextColor="@color/white" />

        <TextView
            android:id="@+id/passwordLabelTv"
            style="@style/TradeFormViewLabel"
            android:layout_marginTop="@dimen/user_admission_input_view_top_margin"
            android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
            android:freezesText="true"
            android:text="@string/enter_your_email"
            tools:textColor="@color/deepTealSecondaryTextColor" />

        <com.stocksexchange.android.ui.views.InputView
            android:id="@+id/passwordIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:etHintText="@string/new_password"
            tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
            tools:etTextColor="@color/white"
            tools:iconColor="@color/colorUserAdmissionInputViewIconColor" />

        <TextView
            android:id="@+id/confirmPasswordLabelTv"
            style="@style/TradeFormViewLabel"
            android:layout_marginTop="@dimen/user_admission_input_view_top_margin"
            android:layout_marginBottom="@dimen/user_admission_input_view_title_bottom_margin"
            android:freezesText="true"
            android:text="@string/action_confirm_new_password"
            tools:textColor="@color/deepTealSecondaryTextColor" />

        <com.stocksexchange.android.ui.views.InputView
            android:id="@+id/passwordConfirmationIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:etHintText="@string/action_confirm_new_password"
            tools:etHintTextColor="@color/colorUserAdmissionInputViewHintColor"
            tools:etTextColor="@color/white" />

    </LinearLayout>

</RelativeLayout>